--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,40 @@
 .Rhistory
 .RData
 .Ruserdata
+_bookdown_files/thesis_files/figure-html/res_aci_measure-1.png
+_bookdown_files/thesis_files/figure-html/resacimeasure-1.png
+_bookdown_files/thesis_files/figure-html/unnamed-chunk-5-1.png
+_bookdown_files/thesis_files/figure-html/unnamed-chunk-7-1.png
+_bookdown_files/thesis_files/figure-html/volsecdffull-1.png
+_bookdown_files/thesis_files/figure-html/volsecdfzoom-1.png
+_bookdown_files/thesis_files/figure-html/unnamed-chunk-5-1.png
+_bookdown_files/thesis_files/figure-html/unnamed-chunk-7-1.png
+_bookdown_files/thesis_files/figure-html/volsecdffull-1.png
+_bookdown_files/thesis_files/figure-html/volsecdfzoom-1.png
+_bookdown_files/thesis_files/figure-html/unnamed-chunk-5-1.png
+_bookdown_files/thesis_files/figure-html/unnamed-chunk-7-1.png
+_bookdown_files/thesis_files/figure-html/unnamed-chunk-5-1.png
+_bookdown_files/thesis_files/figure-html/volsecdffull-1.png
+_bookdown_files/thesis_files/figure-html/volsecdfzoom-1.png
+docs/1-Intro.html
+docs/2-mat-met.html
+docs/3-res.html
+docs/4-summary-conclusion.html
+docs/5-discussion.html
+docs/A-supplement.html
+docs/curriculum-vitae.html
+docs/index.html
+docs/list-of-abbreviations.html
+docs/list-of-publications.html
+docs/references.html
+docs/search_index.json
+docs/statutory-declaration.html
+docs/summary.html
+docs/thesis_dsk_discussion_201219.pdf
+docs/thesis_dsk_summary_201222.pdf
+docs/zusammenfassung.html
+docs/figures/results/03_rosettes/detection_model.png
+docs/figures/results/03_rosettes/registration.png
+docs/figures/results/06_rescues/shrm3/rescue_temp_final.png
+docs/files/pubs/klein_2019/.gitignore
+docs/files/pubs/klein_2019/003.jpg
