--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,2 +1,7 @@
 thesis_dsk.pdf
 thesis_dsk_final_210217.pdf
+thesis_dsk_print_title.pdf
+thesis_dsk_print.pdf
+Softcover-Klebebindung _ Heißleimbindung _ Softcover-Leimbindung _ sedruck.de.pdf
+sedruck_gutscheincode
+thesis_dsk_print_rest.pdf
