--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ docs/figures/results/06_rescues/shrm3/rescue_temp_final.png
 docs/files/pubs/klein_2019/.gitignore
 docs/files/pubs/klein_2019/003.jpg
 thesis_dsk.log
+06-cv_picture.Rmd
