--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -5,3 +5,4 @@ thesis_dsk_print.pdf
 Softcover-Klebebindung _ Heißleimbindung _ Softcover-Leimbindung _ sedruck.de.pdf
 sedruck_gutscheincode
 thesis_dsk_print_rest.pdf
+thesis_dsk.tex
